--- a/www/app.css
+++ b/www/app.css
@@ -71,3 +71,21 @@ body {
     color: #ccc;
   }
 }
+
+.login-button {
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login-button-icon {
+  font-size: xxx-large;
+}
+
+.login-button-text {
+  font-size: large;
+}
